[package]
name = "sup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
log = "0.4.17"
env_logger = "0.9.3"
chrono = "0.4.23"
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
ctrlc = { version = "3.2.0", features = ["termination"] }